force-app/main/default/objects/Prototype_Report__c/Prototype_Report__c.object-meta.xml
<CustomObject>
    <label>Prototype Report</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Prototype Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prototype Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>