force-app/main/default/objects/Prototype_Report__c/fields/Average_Monthly_Number__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Number__c</fullName>
    <formula>Total_Number__c /  Sampling_Month_Total__c</formula>
    <label>Average Monthly Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>