force-app/main/default/objects/Prototype_Report__c/fields/Display_Status__c.field-meta.xml
<CustomField>
    <fullName>Display_Status__c</fullName>
    <formula>TEXT(Sampling_Detail__r.Is_Add__c )</formula>
    <label>Display Status</label>
    <type>Text</type>
</CustomField>