force-app/main/default/objects/Prototype_Report__c/fields/Hisense_Entity__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Entity__c</fullName>
    <formula>TEXT(Sampling_Detail__r.Shop__r.Account__r.Hisense_Entity__c)</formula>
    <label>Hisense Entity</label>
    <type>Text</type>
</CustomField>