force-app/main/default/objects/Prototype_Report__c/fields/Price_Rules__c.field-meta.xml
<CustomField>
    <fullName>Price_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Rules</label>
    <referenceTo>Price_Rules__c</referenceTo>
    <relationshipLabel>Prototype Report</relationshipLabel>
    <relationshipName>Prototype_Report</relationshipName>
    <type>Lookup</type>
</CustomField>