force-app/main/default/objects/Prototype_Report__c/fields/Product_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Product_Attribute__c</fullName>
    <formula>Sampling_Detail__r.Product__r.Level__c</formula>
    <label>Product Attribute</label>
    <type>Text</type>
</CustomField>