force-app/main/default/objects/Prototype_Report__c/fields/Responsible_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person_Name__c</fullName>
    <label>Responsible Person Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>