force-app/main/default/objects/Prototype_Report__c/fields/Sampling_Detail__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Detail__c</fullName>
    <label>Sampling Detail</label>
    <referenceTo>Sampling_Detail__c</referenceTo>
    <relationshipLabel>Prototype Report</relationshipLabel>
    <relationshipName>Prototype_Report</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>