force-app/main/default/objects/Prototype_Report__c/fields/Sampling_Duration__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Duration__c</fullName>
    <formula>Sampling_Detail__r.Sampling_Duration__c</formula>
    <label>Sampling Duration(s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>