force-app/main/default/objects/Prototype_Report__c/fields/Sampling_Month_Total__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Month_Total__c</fullName>
    <label>Sampling Month Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>