force-app/main/default/objects/Prototype_Report__c/fields/Sampling_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Start_Date__c</fullName>
    <formula>Sampling_Detail__r.CreatedDate</formula>
    <label>Sampling Start Date</label>
    <type>DateTime</type>
</CustomField>