force-app/main/default/objects/Prototype_Report__c/fields/Shop_Code__c.field-meta.xml
<CustomField>
    <fullName>Shop_Code__c</fullName>
    <formula>Sampling_Detail__r.Shop__r.Shop_Code_Text__c</formula>
    <label>Shop Code</label>
    <type>Text</type>
</CustomField>