force-app/main/default/objects/Prototype_Report__c/fields/Store_Level__c.field-meta.xml
<CustomField>
    <fullName>Store_Level__c</fullName>
    <formula>TEXT(Sampling_Detail__r.Shop__r.Shop_Level__c)</formula>
    <label>Store Level</label>
    <type>Text</type>
</CustomField>