force-app/main/default/objects/Prototype_Report__c/fields/Store_Manager__c.field-meta.xml
<CustomField>
    <fullName>Store_Manager__c</fullName>
    <label>Store Manager</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>