force-app/main/default/objects/Prototype_Report__c/fields/Total_Number_of_Last_6_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Last_6_Month__c</fullName>
    <description>近6个月销量</description>
    <label>Total Number of Last 6 Month</label>
    <summarizedField>Prototype_Report_Daily_Sales__c.Number__c</summarizedField>
    <summaryFilterItems>
        <field>Prototype_Report_Daily_Sales__c.Is_Last_6_Month__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Prototype_Report_Daily_Sales__c.Prototype_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>