force-app/main/default/objects/Prototype_Report__c/fields/Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales__c</fullName>
    <label>Total Sales</label>
    <summarizedField>Prototype_Report_Daily_Sales__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Prototype_Report_Daily_Sales__c.Prototype_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>