force-app/main/default/objects/Prototype_Report__c/fields/Total_Sales_of_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_of_Current_Month__c</fullName>
    <description>当月销售数额</description>
    <label>Total Sales of Current Month</label>
    <summarizedField>Prototype_Report_Daily_Sales__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Prototype_Report_Daily_Sales__c.Is_Current_Month__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Prototype_Report_Daily_Sales__c.Prototype_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>